Adding angle normalizing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(extended-kalman-filters)
+project(ExtendedKF)
 
 cmake_minimum_required (VERSION 3.5)
 
@@ -20,6 +20,6 @@ link_directories(/usr/local/Cellar/libuv/1.14.1/lib)
 
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
-add_executable(extended-kalman-filters ${sources})
+add_executable(ExtendedKF ${sources})
 
-target_link_libraries(extended-kalman-filters z ssl uv uWS)
+target_link_libraries(ExtendedKF z ssl uv uWS)
